--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+
+<head>
+	<meta charset="utf-8" />
+	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+	<meta name="viewport" content="width=device-width" />
+
+	<!-- fontawesome icons -->
+	<script src="https://kit.fontawesome.com/45bf4482a3.js" crossorigin="anonymous"></script>
+
+	%sveltekit.head%
+</head>
+
+<body data-sveltekit-preload-data="hover" class="flex flex-row justify-center mt-8 bg-slate-600">
+	<div style="display: contents">%sveltekit.body%</div>
+</body>
+
 </html>
